--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "./client/tsconfig.json",
     "./client/tsconfig.node.json",
     "./common/tsconfig.json",
-    "./server/tsconfig.json"
+    "./server/tsconfig.json",
+    "./splash/tsconfig.json"
   ],
   "include": ["**/*.ts"]
 }
